--- a/azure-app-kiran/Pages/Index.cshtml
+++ b/azure-app-kiran/Pages/Index.cshtml
@@ -5,5 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Azure App Services</h1>
+    <h1 class="display-4">Hello beautiful😘</h1>;
+    <div>
+        <img src="~/bf.jpg" style="width:20%;"/>
+    </div>
 </div>
