--- a/azure-app-kiran/Pages/Index.cshtml
+++ b/azure-app-kiran/Pages/Index.cshtml
@@ -5,8 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Hello beautiful😘</h1>;
-    <div>
-        <img src="~/bf.jpg" style="width:20%;"/>
-    </div>
+    <h1 class="display-4">Welcome to Azure</h1>
 </div>
