Added changes for staging

--- a/azure-app-kiran/Pages/Index.cshtml
+++ b/azure-app-kiran/Pages/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Azure</h1>
+    <h1 class="display-4">Welcome to Azure for .Net Developers</h1>
     <h3>
-        @ViewData["Greeting"]
+        We are here to learn about Azure with .net technogies.
     </h3>
 </div>
